--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,12 @@
 {
   "name": "servidor",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon app.js",
+    "start": "node app.js",
+    "docker:up": "docker-compose -f docker/docker-compose.yml --env-file .env up -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +22,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
